# survival-densities

./: CMakeLists.txt  R-libraries.txt  context.sh  packrat.R  references.bib  utilities.R
analysis/: CMakeLists.txt
analysis/fat-tail-example/: CMakeLists.txt  run_metadata.R
analysis/set-1/: CMakeLists.txt  run_metadata.R
code/simachine/: CMakeLists.txt
code/stan-dev/: CMakeLists.txt
code/stannis/: CMakeLists.txt
code/waitup/: CMakeLists.txt
code/waitup/waitup/: waitup.Rproj
data/: CMakeLists.txt
fits/: CMakeLists.txt
fits/fat-tail-example/: CMakeLists.txt  calculate-data-quantiles.R  calculate-model-densities.R  calculate-model-quantiles.R  calculate-parameter-estimates.R  connect.R  fat-tail-awesome.R  fat-tail-fail.R  gamma-and-generalized-gamma-are-similar.R  generate-histogram-plots.R  generate-submit-scripts.R  good-data-feelings-data.R  prep-model-data.R  prep-model-inits.R  print-plots.R  run.R
fits/fat-tail-fix/: CMakeLists.txt  fat-tail-awesome.R  fat-tail-fail.R  gamma-and-generalized-gamma-are-similar.R  generate-qq-plots.R  generate-submit-scripts.R
fits/one-level/: CMakeLists.txt  fit.R
fits/one-level/set-1/: CMakeLists.txt  make-fit-targets.R
fits/set-1/: CMakeLists.txt  data.R  generate-submit-scripts.R  run.sh
manuscripts/: CMakeLists.txt
manuscripts/delay-distribution-comparison/: CMakeLists.txt  delay-distribution-comparison.Rnw
models/stan-lang/: CMakeLists.txt
models/stan-lang/bodies/: gamma-exp-sum-gamma-mix-p1.stan.part  gamma-exp-sum-gamma-mix-p2.stan.part
models/stan-lang/full/: CMakeLists.txt
quick-examples/: newton-method.R  prior-justification.R
simulation/: CMakeLists.txt
simulation/one-level/: CMakeLists.txt
simulation/one-level/gamma/: CMakeLists.txt  sim.R
simulation/one-level/generalized-gamma-p1/: CMakeLists.txt  parameters.yaml  sim.R
simulation/one-level/generalized-gamma-p2/: CMakeLists.txt  parameters.yaml  sim.R
simulation/one-level/set-1/: CMakeLists.txt  equivalent-sim-parameterizations.R  make-data-sets.R  make-data-targets.R  make-fit-targets.R  make-parameter-points.R  parameters-full.yaml  parameters.yaml
simulation/one-level/weibull/: CMakeLists.txt  parameters.yaml  sim.R
simulation/one-level/weibull-uniform-mixture/: CMakeLists.txt  parameters.yaml  sim.R
